includes/main.css
/* --------------------------------- Fonts --------------------------------- */
@font-face {
    font-family: "Gotham";
    src: url("../fonts/Gotham.ttf") format("truetype");
}

@font-face {
    font-family: "KG Happy Solid";
    src: url("../fonts/KGHAPPYSolid.ttf") format("truetype");
}

/* ------------------------------- KEY FRAMES ------------------------------ */
@keyframes fadein {
    from {opacity:0;}
    to {opacity:1;}
}
@-moz-keyframes fadein { /* Firefox */
    from {opacity:0;}
    to {opacity:1;}
}
@-webkit-keyframes fadein { /* Safari and Chrome */
    from {opacity:0;}
    to {opacity:1;}
}
@-o-keyframes fadein { /* Opera */
    100% { left: 0; }
}
@keyframes slideright {
    100% { left: 0; }
}
@-moz-keyframes slideright { /* Firefox */
    100% { left: 0; }
}
@-webkit-keyframes slideright { /* Safari and Chrome */
    100% { left: 0; }
}
@-o-keyframes slideright { /* Opera */
    100% { left: 0; }
}

/* --------------------------- Generic Elements ---------------------------- */
:root {
    --red: #DB3E11;
    --bright-red: #ff4d4d;
    --dark-red: #ce2e00;
    --cream: #fffbf5;
    --cream: #fffdf5;
    /* More yellow (IDE color lol) */
    --cream: #fdf6e3;
    /* Lighter yellow */
    --cream: #fcf8ee;
    --dark-cream: #fbf4ea;
    --dark-cream: #fbf3e7;
}

body {
    background-color: var(--cream);
    color: black;
    font: 15px/20px Gotham, Arial, sans-serif;
    font: 20px/28px Gotham, Arial, sans-serif;
    margin: 0px;

    -moz-animation: fadein 2s; /* Firefox */
    -webkit-animation: fadein 2s; /* Safari and Chrome */
    -o-animation: fadein 2s; /* Opera */
    animation: fadein 2s;
}

a {
    /* !important to override pesky Bootstrap css */
    text-decoration: none !important;
    color: var(--red);
}

a:hover {
    -webkit-transition: color 0.2s linear;
    -moz-transition: all 0.2s linear;
    -o-transition: all 0.2s linear;
    transition: all 0.2s linear;
}

img, svg, div, table {
    display: block;
}

header {
    font: 35px 'KG Happy Solid', Arial, sans-serif;
    /*text-align: center;*/
    margin-bottom: 20px;
    text-transform: uppercase;
}

ul li {
    list-style-type: circle;
}

/* --------------------------- Navigation Bar ------------------------------ */
nav {
    width: 100%;
    text-align: right;
    /*display: inline-block;*/
}

nav ul {
    list-style: none;
    padding: 40px 60px;
    /*margin-top: 0px;*/
}

nav ul li {
    display: inline;
}

body.front-page nav ul li:nth-child(1) a,
body.resume nav ul li:nth-child(2) a,
body.about nav ul li:nth-child(3) a {
    color: var(--red);
}

/* Need to specify each link to match level of specificity above, or else above 
rule will override hover rule */
body.front-page nav ul li:nth-child(1) a:hover,
body.resume nav ul li:nth-child(2) a:hover,
body.about nav ul li:nth-child(3) a:hover {
    color: var(--bright-red);
}

nav ul li a {
    margin-left: 40px;
    font: 15px "KG Happy Solid", Arial, sans-serif;
    font: 14px "KG Happy Solid", Arial, sans-serif;
    color: #777;
    text-transform: uppercase;
    -webkit-transition: color 0.2s linear;
    -moz-transition: color 0.2s linear;
    -o-transition: color 0.2s linear;
    transition: color 0.2s linear;
}

nav ul li a:hover {
    color: var(--bright-red);
}

/* ---------------------------- General Pages ------------------------------ */
body:not(.front-page) main {
    max-width: 60%;
    margin: 0 auto;
}

/* ------------------------------ Front Page ------------------------------- */
body.front-page table {
    max-width: 65%;
    margin: 0 auto;
    margin-top: 14vh;
}

body.front-page table td {
    font-size: 25px;
    line-height: 60px;
    vertical-align: top;
}

body.front-page table td:nth-child(odd) {
    padding-top: 20px;
}

body.front-page table span {
    font: 50px 'KG Happy Solid', Arial, sans-serif;
    padding: 0px 30px 0px 15px;
}

body.front-page table td a {
    font-family: 'KG Happy Solid', Arial, sans-serif;
    /*color: var(--red);*/
}

body.front-page table td a:hover {
    color: var(--bright-red);
    -webkit-transition: color 0.2s linear;
    -moz-transition: all 0.2s linear;
    -o-transition: all 0.2s linear;
    transition: all 0.2s linear;
}

body.front-page svg {
    opacity: 0.2;
    margin: 0 auto;
    margin-top: 30px;
    /*width: 1400px;*/
    width: 1250px;
}

body.front-page section:nth-child(2):before {
    content: "";
    position: absolute;
    height: 500px;
    width: 100%;
    background: -moz-linear-gradient(left, var(--cream) 15%, rgba(255, 251, 245, 0) 25%, rgba(255, 251, 245, 0) 75%, var(--cream) 85%);
    /* FF3.6+ */
    background: -webkit-gradient(linear, left top, right top, color-stop(0%, var(--cream)), color-stop(49%, rgba(255, 251, 245, 0)), color-stop(100%, var(--cream)));
    /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(left, var(--cream) 0%, rgba(255, 251, 245, 0) 49%, var(--cream) 100%);
    /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(left, var(--cream) 0%, rgba(255, 251, 245, 0) 49%, var(--cream) 100%);
    /* Opera 11.10+ */
    background: -ms-linear-gradient(left, var(--cream) 0%, rgba(255, 251, 245, 0) 49%, var(--cream) 100%);
    /* IE10+ */
    background: linear-gradient(to right, var(--cream) 15%, rgba(255, 251, 245, 0) 25%, rgba(255, 251, 245, 0) 75%, var(--cream) 85%);
    /* W3C */
    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#ffffff', GradientType=1);
    /* IE6-9 */
    z-index: 1;
}

/* --------------------------- SF SVG Animation ---------------------------- */
/*@keyframes scroll {
    0%   {transform: translateX(80%)}
    100% {transform: translateX(-80%)}
}

@keyframes scroll-lower {
    0%   {transform: translateX(80%) translateY(20px)}
    100% {transform: translateX(-80%) translateY(20px)}
}*/

@keyframes scroll {
    0%   {transform: translateX(-80%)}
    100% {transform: translateX(80%)}
}
/* ... */

